deeptest/deepdeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deep-deployment
  labels:
    app: nginx
spec:
  replicas: 5
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: quay.io/gauravkumar9130/production:v1
        ports:
        - containerPort: 80
