deeptest/deeplb.yaml
apiVersion: v1
kind: Service
metadata:
  name: deep-service
spec:
  selector:
      app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
